samples/_failures_safe/1761393633_01246c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bfa2d6fc.c: In function ‘main’:
./samples/SAFE/__tmp_bfa2d6fc.c:134:5: error: expected declaration or statement at end of input
  134 |     int choice;
      |     ^~~
